--- a/style/app.css
+++ b/style/app.css
@@ -1,3 +1,132 @@
-body { 
- color:#000;
+html {
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    color: #ccc;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+a {
+    color: #999;
+}
+
+.h-100 {
+    height: 100%;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.btn {
+    font-size: 1.5rem;
+    padding: 1rem 2rem;
+    border: none;
+    border-radius: 5px;
+    transition: all .3s ease-in-out;
+    cursor: pointer;
+}
+
+.btn-principal {
+    border: 3px solid hsl(255, 255%, 255%);
+    background-color: hsl(89, 65%, 48%);
+    color: white;
+}
+
+
+.btn-principal:hover {
+    background-color: hsl(89, 63%, 41%);
+}
+
+.btn-principal:focus {
+    background-color: hsl(51, 84%, 12%);
+}
+
+.background-principal {
+    background-color: hsl(89, 65%, 48%);
+
+}
+
+header {
+    height: 12vh;
+}
+
+.header-logo svg {
+    width: 70%;
+}
+
+.header-logo-text {
+    font-size: 15px;
+    text-align: center;
+    position: relative;
+    top: -10px;
+}
+
+.header-nav ul {
+    list-style-type: none;
+}
+
+.header-nav li a {
+    border: 1px solid .btn:hover {}
+
+    ;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    padding: 1rem;
+    transition: all .3s ease-in-out;
+}
+
+.header-nav li a:hover {
+    background-color: hsl(89, 65%, 48%);
+    color: white;
+}
+
+.header-nav li a:focus {
+    background-color: hsl(89, 63%, 41%);
+    color: white;
+}
+
+.slider {
+    height: 88vh;
+    position: relative;
+    width: 100%;
+}
+
+.slider .slider-img img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.slider .slider-info {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.slider .slider-info h1 {
+    font-family: 'Great Vibes', Arial, Helvetica, sans-serif;
+    color: rgb(255, 255, 255);
+    text-shadow: 0 0 2px rgba(0, 0, 0, 1), 2px 2px 4px rgba(0, 0, 0, .8), 3px 3px 15px rgba(0, 0, 0, .5);
+    font-size: 7rem;
+    text-align: center;
+}
+
+.slider .slider-info .btn-principal {
+    box-shadow: 0 2px 0px rgba(0, 0, 0, .3), 0 5px 15px rgba(0, 0, 0, .5);
+    position: relative;
+    top: 0;
+}
+
+.slider .slider-info .btn-principal:focus {
+    box-shadow: 0 1px 0px rgba(0, 0, 0, .3), 0 5px 15px rgba(0, 0, 0, .5);
+    position: relative;
+    top: 3px;
 }
