--- a/style/app.css
+++ b/style/app.css
@@ -8,18 +8,19 @@ html {
 }
 
 .section {
-    padding-top:4rem;
+    padding-top: 4rem;
     padding-bottom: 4rem;
 }
 
 h2 {
     font-size: 2.2rem;
-    margin-bottom:4rem;
+    margin-bottom: 4rem;
 }
 
 a {
     color: #444;
 }
+
 select {
     border: 1px solid #999;
     border-radius: 0;
@@ -27,7 +28,7 @@ select {
 }
 
 .shadow {
-    box-shadow: 0 1px 5px rgba(0,0,0,.2), 0 7px 20px rgba(0,0,0,.2);
+    box-shadow: 0 1px 5px rgba(0, 0, 0, .2), 0 7px 20px rgba(0, 0, 0, .2);
 }
 
 .h-100 {
@@ -37,9 +38,8 @@ select {
 .w-100 {
     width: 100%;
 }
-a
 
-.vh-100 {
+a .vh-100 {
     height: 100vh;
 }
 
@@ -67,31 +67,48 @@ a
     background-color: hsl(51, 84%, 12%);
 }
 
-.color-principal {
-    color:  hsl(89, 65%, 48%);
+.btn-secondary {
+    background-color: hsl(0, 0%, 80%);
+    color: #999;
 }
+
+.btn-secondary:hover {
+    background-color: hsl(0, 0%, 65%);
+    color: white;
+}
+
+.btn-secondary:focus {
+    background-color: hsl(0, 0%, 45%);
+}
+
+.color-principal {
+    color: hsl(89, 65%, 48%);
+}
+
+
 
 
 .background-principal {
     background-color: hsl(89, 65%, 48%);
 }
 
-.img-back, .img-responsive {
+.img-back,
+.img-responsive {
     height: 100%;
-    width:100%;
-    object-fit:cover;
+    width: 100%;
+    object-fit: cover;
 }
 
 .text-align-left {
-    text-align:left;
+    text-align: left;
 }
 
 .text-align-right {
-    text-align:right;
+    text-align: right;
 }
 
 .text-align-center {
-    text-align:center;
+    text-align: center;
 }
 
 
@@ -100,12 +117,12 @@ a
 /* ---------------- HEADER --------------------- */
 header {
     height: 12vh;
-    box-shadow: 0 1px 2px rgb(100,100,100,.3), 0 2px 10px rgba(0,0,0,.2);
+    box-shadow: 0 1px 2px rgb(100, 100, 100, .3), 0 2px 10px rgba(0, 0, 0, .2);
 
 }
 
 .header-logo svg {
-    max-width: 75%;
+    max-width: 65%;
 }
 
 .header-logo-text {
@@ -189,13 +206,14 @@ header {
     text-align: center;
     background-color: white;
 }
+
 .card h2 {
-    color:hsl(89, 65%, 48%);
+    color: hsl(89, 65%, 48%);
     text-align: center;
 }
 
 .card .card-item {
-    box-shadow: 0 1px 5px rgba(0,0,0,.4), 0 7px 20px rgba(0,0,0,.2);
+    box-shadow: 0 1px 5px rgba(0, 0, 0, .4), 0 7px 20px rgba(0, 0, 0, .2);
     padding: 1rem;
     border-radius: .5rem;
     position: relative;
@@ -203,14 +221,14 @@ header {
     text-decoration: none;
 }
 
-.card .card-item-img{
+.card .card-item-img {
     width: 100%;
-    height:15rem;
+    height: 15rem;
 }
 
 .card .card-item-img img {
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -222,12 +240,12 @@ header {
 .card .card-item-price {
     position: absolute;
     top: 0;
-    right:-10px;
+    right: -10px;
     background-color: red;
     color: white;
     padding: .5rem 2rem;
     transform: rotate(15deg);
-    box-shadow: 0 1px 5px rgba(0,0,0,.7), 0 7px 10px rgba(0,0,0,.3);
+    box-shadow: 0 1px 5px rgba(0, 0, 0, .7), 0 7px 10px rgba(0, 0, 0, .3);
 }
 
 .card .card-item-price p {
@@ -245,15 +263,15 @@ header {
 
 .banner-image-back {
     background: url(/img/fondo-vegan.jpg);
-    width:100%;
+    width: 100%;
     height: 100vh;
     background-size: cover;
-    display:flex;
+    display: flex;
 }
 
 .banner .banner-description {
     font-size: 1.6rem;
-    line-height:2.3rem;
+    line-height: 2.3rem;
 }
 
 
@@ -261,10 +279,11 @@ header {
 footer {
     background-color: gray;
     padding: 1rem;
-    text-align: center; 
+    text-align: center;
 }
+
 footer p {
-    margin:0;
+    margin: 0;
     line-height: 2rem;
     color: white;
 }
@@ -295,28 +314,28 @@ aside.products-category {
 .products-category .products-category-nav ul {
     list-style-type: none;
     padding-left: 0;
-    margin-bottom:0;
+    margin-bottom: 0;
 }
 
 .products-category .products-category-nav li {
     list-style-type: none;
     padding: 1rem 1rem;
-    border-top: 1px solid rgba(0,0,0,.15);
+    border-top: 1px solid rgba(0, 0, 0, .15);
     transition: all .3s ease-in-out;
     cursor: pointer;
 }
 
 .products-category .products-category-nav li:hover {
-        background-color: rgba(0,0,0,.1);
+    background-color: rgba(0, 0, 0, .1);
 }
 
 .products-category .products-category-nav li:active {
-    background-color: rgba(0,0,0,.3);
+    background-color: rgba(0, 0, 0, .3);
     color: white;
 }
 
 .products-category .products-category-nav li:last-child {
-    border-bottom: 1px solid rgba(0,0,0,.15);
+    border-bottom: 1px solid rgba(0, 0, 0, .15);
 }
 
 .products-resaults-selector {
@@ -327,12 +346,12 @@ aside.products-category {
 .products-gallery .card {
     background-color: white;
     transition: all .3s ease-in-out;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .products-gallery .card:hover {
     transform: scale(1.08);
-    z-index:100;
+    z-index: 100;
 }
 
 
@@ -344,20 +363,20 @@ aside.products-category {
 .slider-gallery .slider-gallery-thumbnails {
     list-style-type: none;
     padding: 0;
-    margin-top:2rem
+    margin-top: 2rem
 }
 
-.slider-gallery .slider-gallery-thumbnails li img{
+.slider-gallery .slider-gallery-thumbnails li img {
     padding: 3px;
     transition: all .3s ease-in-out;
 }
 
-.slider-gallery .slider-gallery-thumbnails li img:hover{
-    background-color:#777;
+.slider-gallery .slider-gallery-thumbnails li img:hover {
+    background-color: #777;
     transform: scale(1.08);
 }
 
-.product-info .product-info-price{
+.product-info .product-info-price {
     margin: 1rem 0 2rem;
 }
 
@@ -365,7 +384,7 @@ aside.products-category {
     background-color: red;
     color: white;
     padding: .5rem 2rem;
-    box-shadow: 0 1px 5px rgba(0,0,0,.7), 0 7px 10px rgba(0,0,0,.3);
+    box-shadow: 0 1px 5px rgba(0, 0, 0, .7), 0 7px 10px rgba(0, 0, 0, .3);
     font-weight: bold;
     font-size: 1.5rem;
     display: inline;
@@ -385,40 +404,44 @@ aside.products-category {
     border-top: 1px solid hsl(89, 65%, 48%);
     border-bottom: 1px solid hsl(89, 65%, 48%);
 }
+
 .add-substract input {
-    width:5rem;
+    width: 5rem;
     text-align: center;
-    border-left:0;
-    border-right:0;
+    border-left: 0;
+    border-right: 0;
     border-top: 1px solid hsl(89, 65%, 48%);
     border-bottom: 1px solid hsl(89, 65%, 48%);
 }
 
 .add-substract .increment:hover,
-.add-substract .decrement:hover  {
+.add-substract .decrement:hover {
     background-color: hsl(89, 63%, 41%);
 }
+
 .add-substract .increment:active,
-.add-substract .decrement:active  {
+.add-substract .decrement:active {
     background-color: hsl(51, 84%, 12%);
     color: white;
 }
 
 button.comprar {
-    border:0
+    border: 0
 }
 
 /* ---------------- CONTACTO ---------------- */
 .contact {
-    min-height:55vh;
+    min-height: 55vh;
 }
+
 .contact input,
 .contact textarea {
     width: 100%;
-    margin-bottom:1rem;
-    border:1px solid hsla(89, 63%, 41%,.6);
-    background-color:hsla(89, 63%, 41%,.2);
+    margin-bottom: 1rem;
+    border: 1px solid hsla(89, 63%, 41%, .6);
+    background-color: hsla(89, 63%, 41%, .2);
     padding: .5rem 1rem;
+    border-radius: 5px;
 }
 
 .contact input:focus,
@@ -433,17 +456,15 @@ button.comprar {
 }
 
 .contact svg {
-    fill:  hsl(89, 65%, 48%);
-    vertical-align:middle;
-    margin-right:1rem;
-    width: 1.9rem;
-    
+    fill: hsl(89, 65%, 48%);
+    vertical-align: middle;
+    margin-right: 1rem;
+    width: 2.5rem;
+
 }
 
 .contact p {
     font-size: 1.2rem;
 }
 
-.contact-info {
-    
-}
+.contact-info {}
