--- a/style/app.css
+++ b/style/app.css
@@ -93,7 +93,7 @@ a .vh-100 {
 */
 .ellipsis {
     display: -webkit-box;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 5;
     -webkit-box-orient: vertical;
     overflow: hidden;
   }
@@ -375,7 +375,7 @@ header {
 }
 
 .banner-image-back {
-    background: url(/img/pexels-lumn-1028599.jpg);
+    background: url(/img/fondo-vegan.jpg);
     width: 100%;
     height: 100vh;
     background-size: cover;
@@ -419,6 +419,8 @@ aside.products-category {
     background-color: hsl(0, 0%, 90%);
     padding: 1rem;
     border-radius:5px;
+    position: sticky;
+    top: 3vh;
 }
 
 .products-category h2 {
@@ -486,7 +488,7 @@ aside.products-category {
 }
 
 .slider-gallery .slider-gallery-thumbnails li img:hover {
-    background-color: #777;
+    box-shadow: 0 0 0 2px hsl(89, 65%, 48%), 0 0 30px 0 hsla(89, 65%, 48%,.6);
     transform: scale(1.08);
 }
 
