--- a/sass/_featured-productos.scss
+++ b/sass/_featured-productos.scss
@@ -2,7 +2,7 @@
 
 .products-resaults-selector {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     font-size: .8rem;
     line-height: 2rem;
 }
