--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -13,6 +13,11 @@
             box-shadow: 0 0 10px $primary-color;
             background-color: $white;
         }
+        &.invalid {
+            border: 1px solid darken($danger-color, 10%);
+            background-color: rgba($white,.2);
+            box-shadow: 0 0 10px rgba($danger-color,.5);
+        }
     }
     input[type="radio"]{
         width:auto;
@@ -28,5 +33,15 @@
     }
     p {
         font-size: 1.2rem;
+    }
+    .error-message {
+        font-size: .7rem;
+        color: $danger-color;
+        position: absolute;
+        bottom:-3px;
+        display: none;margin:0;
+    }
+    .error {
+        color:$danger-color;
     }
 }
