--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -35,11 +35,13 @@
         font-size: 1.2rem;
     }
     .error-message {
-        font-size: .7rem;
+        font-size: .6rem;
         color: $danger-color;
         position: absolute;
-        bottom:-3px;
-        display: none;margin:0;
+        bottom:7px;
+        display: none;
+        text-align: right;
+        right:14px;
     }
     .error {
         color:$danger-color;
