--- a/sass/app.scss
+++ b/sass/app.scss
@@ -4,16 +4,16 @@
             "variables",
             "mixins",
             "comun",
-            "add-substract",
-            "slider-gallery",
-            "header",
-            "slider",
-            "card",
-            "featured-productos",
-            "producto",
-            "banner",
-            "contacto",
-            "cart",
-            "summary",
-            "tabs",
-            "footer";
+            "front/add-substract",
+            "front/slider-gallery",
+            "front/header",
+            "front/slider",
+            "front/card",
+            "front/featured-productos",
+            "front/producto",
+            "front/banner",
+            "front/contacto",
+            "front/cart",
+            "front/summary",
+            "front/tabs",
+            "front/footer";
