--- a/sass/admin/_admin-comun.scss
+++ b/sass/admin/_admin-comun.scss
@@ -4,75 +4,150 @@
     min-height: 100vh;
     padding-left:260px;
     transition: padding-left .3s ease 0s;
-    background-color: lightgray;
+    background-color: white;
     .collapsed{
         padding-left:0px;
     }
-}
-
-.sidebar-menu{
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 100;
-    height: 100vh;
-    width: 260px;
-    overflow: hidden;
-    background: #303641;
-    box-shadow: 2px 0 25px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    .collapsed {
-        left:-260px;
-    }
-    .logo {
-        width:70%;
-        height: 75px;
-    }
-    ul {
-        list-style-type: none;
-        padding:0;
+    .sidebar-menu{
+        position: fixed;
+        left: 0;
+        top: 0;
+        z-index: 100;
+        height: 100vh;
+        width: 260px;
+        overflow: hidden;
+        background: #303641;
+        box-shadow: 2px 0 25px rgba(0, 0, 0, 0.1);
         transition: all 0.3s ease 0s;
-        &.submenu {
-            height:0;
-            overflow: hidden;
+        .collapsed {
+            left:-260px;
+        }
+        .sidebar-header {
+            display: flex;
+            justify-content: space-between;
+            .logo {
+                width:70%;
+                height: 95px;
+            }
+        }
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding:0;
+            transition: all 0.3s ease 0s;
+            &.submenu {
+                height:0;
+                overflow: hidden;
+                &.active {
+                    height: auto;
+                }
+            }
+            li {
+                margin-bottom: 1px;
+                background-color:rgba(0,0,0,.3);
+                &:hover {
+                    background-color:rgba(0,0,0,.5);
+                }
+            }
+        }
+    
+        a {
+            color: white;
+            text-decoration: none;
+            display: block;
+            padding: .6rem 1rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-weight: 200;
             &.active {
-                height: auto;
+                font-weight: 600;
+                background-color:black;
             }
         }
-        li {
-            margin-bottom: 1px;
-            background-color:rgba(0,0,0,.3);
-            &:hover {
-                background-color:rgba(0,0,0,.5);
-            }
+        .material-symbols-outlined {
+            font-variation-settings:
+            'FILL' 0,
+            'wght' 200,
+            'GRAD' 0,
+            'opsz' 48
         }
+    
     }
-
-    a {
-        color: white;
-        text-decoration: none;
-        display: block;
-        padding: .6rem 1rem;
+    .header{
+        width: 100%;
+        height: 95px;
+        background-color: rgba(200,200,220,.1);
         display: flex;
         justify-content: space-between;
         align-items: center;
-        font-weight: 200;
-        &.active {
-            font-weight: 600;
-            background-color:black;
+        .izda, .dcha {
+            display: flex;
+            justify-content: start;
+            align-items: center;
+        }
+        .dcha {
+            justify-content: end;
+        }
+        .icon-default {
+            padding:.5rem;
+
+            cursor: pointer;
+            &:hover {
+                fill: $primary-color;
+            }
+            svg {
+                width:100%;
+                height:100%;
+            }
+        }
+
+        .hamburger {
+            width: 70px;
+            height: 70px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            a {
+                width: 60%;
+                border-radius: 5px;
+                border: 1px solid black;
+                padding: .1rem .2rem;
+            }
+
+        }
+        .search-box {
+            input {
+                width: 350px;
+                border-radius: 33px;
+                border: none;
+                height: 40px;
+                padding-left: 20px;
+                padding-right: 40px;
+                letter-spacing: 0;
+                background: white;
+                color: #b1a7a7;
+                box-shadow: 0 0 6px rgba(0,0,0,.02),0 0 15px rgba(100,100,100,.1);
+            }
+            form {
+                margin-bottom: 0;
+                i {
+                    position: absolute;
+                    right: 21px;
+                    top: 14px;
+                    font-size: 14px;
+                    color: #b1a7a7;
+                }
+            }
         }
     }
-    .material-symbols-outlined {
-        font-variation-settings:
-        'FILL' 0,
-        'wght' 200,
-        'GRAD' 0,
-        'opsz' 48
-      }
-
-      .header{
-        width: 100%;
-        height: 75px;
-        background-color: rgba(0,0,0,.3);
-      }
+    .main-content {
+        padding:2rem;
+        h2 {
+            font-size: 2.5rem;
+            font-weight: 100;
+            margin-top: 0;
+            border-bottom: 1px solid $primary-color;
+        }
+    }
 }
